objects/Quote.object
<CustomObject>
    <fields>
        <fullName>A_revisar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A revisar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comercial_Fama__c</fullName>
        <formula>IMAGE(&quot;https://vicubo-dev-ed--c.eu11.visual.force.com/resource/1532346568000/comercialFamaLogo&quot;, &quot;&quot;,150,150)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comercial Fama</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>HOME_Quotes_a_Revisar</fullName>
        <columns>A_revisar__c</columns>
        <columns>QUOTE.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>A_revisar__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>HOME Quotes a Revisar</label>
    </listViews>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <recordTypes>
        <fullName>quote_rec_type</fullName>
        <active>true</active>
        <label>quote rec type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>